# anionu-sdk

./: .gitignore  CMakeLists.txt  Compiling.txt  Dependencies.txt  README.md  SpotPlugin.cmake  dependencies.txt
Anionu/: CMakeLists.txt
Anionu/include/Anionu/: APIClient.h  Config.h  Event.h  MotionDetector.h
Anionu/include/Sourcey/Anionu/: APIClient.h  Authenticator.h  Event.h  MotionDetector.h
Anionu/samples/: CMakeLists.txt
Anionu/samples/AnionuAPIConsole/: AnionuAPIConsole.cpp  CMakeLists.txt
Anionu/samples/MotionDetector/: CMakeLists.txt  MotionDetector.cpp
Anionu/samples/WaveformOutput/: AVFileReader.cpp  AVFileReader.h  MatrixPacketizer.h  WaveformOutput.cpp
Anionu/src/: APIClient.cpp  Authenticator.cpp  Event.cpp  MotionDetector.cpp
Anionu/tests/: AnionuTests.cpp  CMakeLists.txt
ISpot/: CMakeLists.txt
ISpot/include/Sourcey/Spot/: IChannel.h  IChannelManager.h  IConfigurable.h  IConfiguration.h  IDiagnosticManager.h  IEnvironment.h  IMediaManager.h  IMode.h  IModeManager.h  IModeRegistry.h  IModule.h  IPlugin.h  ISession.h  IStreamingManager.h  IStreamingSession.h  ISynchronizer.h  ITaskScheduler.h
ISpot/src/: IChannel.cpp  IChannelManager.cpp  IConfigurable.cpp  IConfiguration.cpp  IDiagnosticManager.cpp  IMediaManager.cpp  IMode.cpp  IModeManager.cpp  IModule.cpp  IPlugin.cpp  ISession.cpp  IStreamingManager.cpp  IStreamingSession.cpp  ISynchronizer.cpp  ITaskScheduler.cpp
SpotAPI/: CMakeLists.txt
SpotAPI/include/Anionu/Spot/API/: Channel.h  ChannelManager.h  Client.h  Config.h  Environment.h  IChannel.h  IChannelManager.h  IClient.h  IConfiguration.h  IEnvironment.h  IMode.h  (+20 more)
SpotPlugins/: CMakeLists.txt
SpotPlugins/EventPlugin/: CMakeLists.txt  EventPlugin.cpp  EventPlugin.h
SpotPlugins/MediaPlugin/: CMakeLists.txt  CaptureMode.cpp  CaptureMode.h  MediaPlugin.cpp  MediaPlugin.h  manifest.json
SpotPlugins/MediaProvider/: CMakeLists.txt  MediaProvider.cpp  MediaProvider.h  manifest.json
SpotPlugins/RecordingMode/: CMakeLists.txt  RecordingMode.cpp  RecordingMode.h  RecordingModeImpl.cpp  RecordingModeImpl.h  manifest.json
SpotPlugins/RecordingModePlugin/: CMakeLists.txt  RecordingMode.cpp  RecordingMode.h  RecordingMode.md  RecordingModePlugin.cpp  RecordingModePlugin.h  manifest.json
SpotPlugins/SamplePlugin/: CMakeLists.txt  SamplePlugin.cpp  SamplePlugin.h
SpotPlugins/SurveillanceMode/: CMakeLists.txt  SurveillanceMode.cpp  SurveillanceMode.h  SurveillanceModeImpl.cpp  SurveillanceModeImpl.h  SurveillanceMultipartPacketizer.h  manifest.json
SpotPlugins/SurveillanceModePlugin/: CMakeLists.txt  SurveillanceMode.cpp  SurveillanceMode.h  SurveillanceModePlugin.cpp  SurveillanceModePlugin.h  SurveillanceMultipartAdapter.h  SurveillanceMultipartPacketizer.h  manifest.json
anionu/: CMakeLists.txt
anionu/include/anionu/: apiclient.h  config.h  event.h  motiondetector.h  ssl.h
anionu/samples/: .gitignore  CMakeLists.txt
anionu/samples/motiondetector/: CMakeLists.txt  motiondetector.cpp
anionu/src/: apiclient.cpp  event.cpp  motiondetector.cpp
anionu/tests/: CMakeLists.txt  anionutests.cpp
spotapi/: CMakeLists.txt
spotplugins/: CMakeLists.txt
spotplugins/mediaplugin/: CMakeLists.txt  README.md  capturemode.cpp  capturemode.h  manifest.json  mediaplugin.cpp  mediaplugin.h  mediaplugin.md  plugin.json
spotplugins/recordingmodeplugin/: CMakeLists.txt  plugin.json  recordingmode.cpp  recordingmode.h  recordingmodeplugin.cpp  recordingmodeplugin.h
spotplugins/surveillancemodeplugin/: CMakeLists.txt  plugin.json  surveillancemode.cpp  surveillancemode.h  surveillancemode.md  surveillancemodeplugin.cpp  surveillancemodeplugin.h  surveillancemultipartadapter.h
spotplugins/testplugin/: CMakeLists.txt  README.md  capturemode.cpp  capturemode.h  plugin.json  testplugin.cpp  testplugin.h  testplugin.md
spotplugins/webrtcplugin/: CMakeLists.txt  README.md  peerconnectionclient.cpp  peerconnectionclient.h  plugin.json  videostreamcapturer.cpp  videostreamcapturer.h  webrtcplugin.cpp  webrtcplugin.h  webrtcplugin.md
(+17 files in other folders)
