ask_build_sourcey_application(spotplugins)
if(BUILD_APPLICATIONS AND BUILD_APPLICATION_spotplugins) 
  if(BUILD_MODULES OR BUILD_APPLICATIONS)   
    # Dynamically adding subdirectories 
    subdirlist(subdirs ${CMAKE_CURRENT_SOURCE_DIR})
    foreach(name ${subdirs})
      set(dir "${CMAKE_CURRENT_SOURCE_DIR}/${name}")
      if (EXISTS "${dir}/CMakeLists.txt")
        add_subdirectory(${dir})
      endif()
    endforeach() 
  endif()
endif()

#add_subdirectory(surveillancemodeplugin)
#add_subdirectory(recordingmodeplugin)
#add_subdirectory(mediaplugin)
