set(BUILD_SPOT_PLUGINS ON CACHE BOOL "Build Spot plugins?")
if(BUILD_SPOT_PLUGINS)
  subdirlist(subdirs ${CMAKE_CURRENT_SOURCE_DIR})
  foreach(name ${subdirs})        
    set(BUILD_SPOT_PLUGIN_${name} ON CACHE BOOL "Build Spot plugin: ${name}")
    if(BUILD_SPOT_PLUGIN_${name})  
      set(dir "${CMAKE_CURRENT_SOURCE_DIR}/${name}")
      if (EXISTS "${dir}/CMakeLists.txt")
        add_subdirectory(${dir})
      endif()
    endif()
  endforeach() 
endif()
